--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,4 @@
-<div class="container">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" [routerLink]="['/home']" routerLinkActive="router-link-active">News Feed</a>
-    <a class="navbar-brand" [routerLink]="['/post']" routerLinkActive="router-link-active">Post</a>
-  </nav>
-</div>
+ <span class="navigationbar">
+  <a class="navbar-brand" [routerLink]="['/home']" routerLinkActive="router-link-active">News Feed</a>
+  <a class="navbar-brand" [routerLink]="['/post']" routerLinkActive="router-link-active">Post</a>
+ </span>
