--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,11 @@
 .footer{
-position: fixed;
-padding-top:5px;
+   position: fixed;
+   padding-top:0.26vw;
    left: 0;
    bottom: 0;
    width: 100%;
    background-color: #565555;
    color: white;
    text-align: center;
+   font-size: 0.9vw;
 }
