--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,8 +1,17 @@
-.bg-light{
-  position: fixed;
-  z-index:200;
-}
-
 .router-link-active{
   color:blue;
+}
+
+a{
+  color:black;
+}
+
+.navigationbar{
+  color: black;
+  position:fixed;
+  padding: 0.6vw 0.6vw;
+  font-size: 1vw;
+  background-color: #f8f9fa;
+  margin:auto;
+  margin-left:3%;
 }
