--- a/src/app/post/post.component.css
+++ b/src/app/post/post.component.css
@@ -1,7 +1,7 @@
 .postSkeleton {
   background-color: #f8f9fa;
   box-shadow: 1px 1px 2px grey;
-  width: 50%;
+  width: 38vw;
   padding: 0.7vw 0.7vw 0.7vw 0.7vw;
   position: absolute;
   margin: auto;
@@ -18,7 +18,6 @@
 }
 
 .title {
-  /*font-weight: bold;*/
   color: black;
   font-size: 1.4vw;
   display: block;
@@ -48,4 +47,21 @@
 .submitBtn{
   position:relative;
   margin-left: 3.5%;
+  font-size:1vw;
+}
+
+label{
+  font-size: 1vw;
+}
+
+.form-control{
+  padding: 0.4vw 0.4vw;
+  font-size: 1vw;
+  line-height: 1.2vw;
+}
+.errorNotification{
+  padding: 0.4vw 0.4vw;
+  font-size: 1vw;
+  line-height: 1vw;
+  font-size: 0.9vw;
 }
