--- a/src/app/home-twitter/home-twitter.component.css
+++ b/src/app/home-twitter/home-twitter.component.css
@@ -1,6 +1,3 @@
-ul{
-  list-style-type: none;
-}
 
 .allPosts{
   width:38vw;
@@ -12,6 +9,7 @@ ul{
   padding: 1vw 1vw 1vw 1vw;
   background-color: #ffffff;
   box-shadow: 1px 1px 1px 1px grey;
+  margin-bottom:10%;
 }
 
 .post{
@@ -29,4 +27,18 @@ ul{
 
 .postBody{
   font-size:0.9vw;
+}
+
+.spinner {
+  margin-left:40%;
+  border: 6px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 6px solid #3498db;
+  width: 60px;
+  height: 60px;
+  animation: spin 2s linear infinite;
+}
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
